--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
   sonarcloud:
     organization: "jeancarlosjc-github"
     token:
-      secure: $SONAR_TOKEN
+      secure: "6e83a14c1d0ccd3c00db85984e24934c03655bbd"
 jdk:
   - oraclejdk8
 cache:
