--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,17 @@ sudo: false
 install: true
 addons:
   sonarcloud:
-    organization: "jeancarlosjc-github"
+    organization: "jeancarlosjc-github"   
+ token:
+      secure: "$SONAR_TOKEN"
 jdk:
   - oraclejdk8
+
+script:
+  # JaCoCo is used to have code coverage, the agent has to be activated
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.sonar/cache'
-      
-script:
-- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
